(Format: Year/Month/Day)
Changes for 0.9.14:
*05/08/15
   * Added uk_UA locales (Thanks Anatoli Sakhnik and php-coder)
     nls/uk_UA/*, configure.in, nls/Makefile.ams
*05/07/25:
    Fix for #1240248, Segfaults for :MoveTabLeft/Right (Mathias)
    Container.cc FbWinFrame.cc Window.cc
*05/07/20:
    Changed some *Focus options (Mathias)
    removed SloppyFocus, SemiSloppyFocus and ClickToFocus options
    added MouseFocus, ClickFocus, MouseTabFocus, ClickTabFocus
    - MouseFocus - change the focus to the window under the mouse
      (almost similar to the 'old' SloppyFocus)
    - ClickFocus - change the focus to the window the user clicks
    - MouseTabFocus - change active tabclient to the one under the
      mouse in titlebar, does NOT change the focus
    - ClickTabFocus - change active tabclient when clicked onto a 
      tabbutton
    to achieve former SemiSloppyFocus behavior one needs MouseFocus and
    ClickTabFocus
    Window.cc Screen.cc/hh ScreenResource.cc FocusModelMenuItem.hh fluxbox.cc
    nls/fluxbox-nls.hh and some nls/*/Translation.m
*05/07/13:
    Dragging a tab button from current titlebar onto current client area will
    detach that client (Mathias)
    Window.cc
*05/07/12:
    Renaming of 'bsetroot' to 'fbsetroot' (Mathias)
    blackbox's 'bsetroot' and fluxbox's 'bsetroot' have different syntax
    nowadays and collide when you install fluxbox and blackbox. hence
    the renaming
    updated manpage, helper utils (fbgm, startfluxbox, fbsetbg), nls etc
*05/07/06:
    Added even more applications to fbgm (Mathias)
    fluxbox-generate_menu.in
  * Added info about locale path in -info argument (Thanks php-coder)
    src/main.cc, nls/*
*05/07/05:
  * Respect border size in the MoveTo action (Mathias)
    CurrentWindowCmd.cc
  * Added kcommander, Valknut, dcgui-qt, quickdc, asami, amsn to fbgm (Mathias)
    fluxbox-generate_menu.in
*05/06/30:
  * Fix #1223780, fbgm updated (Mathias)
    - added gnome-alsamixer